<resources>
    <string name="app_name">VoyaVue</string>
    <string name="title_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="editTxtFullName">Full Name</string>
    <string name="editTxtEmail">Email ID</string>
    <string name="editTxtEnterPassword">Enter Password</string>
    <string name="editTxtReEnterPassword">Re-enter Password</string>
    <string name="btnRegister">Register</string>
    <string name="txtViewAlreadyAMember">Already a Member? Log in</string>
    <string name="btnLogin">Login</string>
    <string name="txtViewNewMember">New Member? Register</string>
    <string name="title_activity_user_info_register">UserInfoRegisterActivity</string>
    <string name="editTxtUserName">User Name</string>
    <string name="editTxtMobNo">Mobile No.</string>
    <string name="editTxtEnterDOB">Date of Birth</string>
    <string name="editTxtFirstName">First Name</string>
    <string name="editTxtLastName">Last Name</string>
    <string name="editTxtSex">Sex</string>
    <string name="editTxtBio">Write something about you.</string>
    <string name="imageTitleHint">Image Title</string>
    <string name="imageDescHint">Image Description</string>
    <string name="timeToVisitHint">Best Time to Visit !</string>
    <string name="costEstimationHint">Cost (Approx.)</string>
    <string name="btnPost">Post</string>
    <string name="PostOwnerPicture">Owner profile picture</string>
    <string name="PostPicture">Post main display picture</string>
    <string name="StarButton">Star button to like post</string>
    <string name="title_new">Add Post</string>
    <string name="toggleButton" />
    <string name="toggleButtonVerified">Verified</string>
    <string name="toggleButtonUnverified">Unverified</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="Tags">
        <item>Sightseeing</item>
        <item>Kids</item>
        <item>Shopping</item>
        <item>Food</item>
        <item>Restaurant</item>
        <item>Nature</item>
    </string-array>
    <string-array name="Location">
        <item>Toronto</item>
        <item>Calgary</item>
        <item>Vancouver</item>
    </string-array>
</resources>